COnfirm appointment done without testing

--- a/templates/confirmEmail.html
+++ b/templates/confirmEmail.html
@@ -8,7 +8,7 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">You appointment is Booked for </td>
+            <td colspan="2">You appointment is Confirmed for </td>
         </tr>
         <tr>
             <td><b>Services</b></td>
@@ -21,9 +21,6 @@
         <tr>
             <td><b>Time</b></td>
             <td><b> {{time}} </b></td>
-        </tr>
-        <tr>
-            <td colspan="2">Kindly wait for confirmation Email</td>
         </tr>
     </table>
 </body>
